<resources>
    <string name="app_name">NYTimesNews</string>

    <string name="all_sections">all-sections</string>
    <string name="Arts">Arts</string>
    <string name="Automobiles">Automobiles</string>
    <string name="Blogs">Blogs</string>
    <string name="Books">Books</string>
    <string name="Business_day">Business Day</string>
    <string name="Education">Education</string>
    <string name="Fashion_style">Fashion &amp; Style</string>
    <string name="Food">Food</string>
    <string name="Health">Health</string>
    <string name="Job_market">Job Market</string>
    <string name="Magazine">Magazine</string>
    <string name="Movies">Movies</string>
    <string name="Multimedia">Multimedia</string>
    <string name="NYTNow">NYT Now</string>
    <string name="Obituaries">Obituaries</string>
    <string name="Science">Science</string>
    <string name="Sports">Sports</string>
    <string name="Style">Style</string>
    <string name="Theater">Theater</string>
    <string name="Travel">Travel</string>
    <string name="World">World</string>

    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>


    <string-array name="top_section_array">
        <item>@string/all_sections</item>
        <item>@string/Arts</item>
        <item>@string/Automobiles</item>
        <item>@string/Blogs</item>
        <item>@string/Business_day</item>
        <item>@string/Education</item>
        <item>@string/Fashion_style</item>
        <item>@string/Food</item>
        <item>@string/Health</item>
        <item>@string/Job_market</item>
        <item>@string/Magazine</item>
        <item>@string/Movies</item>
        <item>@string/Multimedia</item>
        <item>@string/NYTNow</item>
        <item>@string/Obituaries</item>
        <item>@string/Science</item>
        <item>@string/Sports</item>
        <item>@string/Style</item>
        <item>@string/Theater</item>
        <item>@string/Travel</item>
        <item>@string/World</item>
    </string-array>


    <string-array name="month_array">
        <item>@string/January</item>
        <item>@string/February</item>
        <item>@string/March</item>
        <item>@string/April</item>
        <item>@string/May</item>
        <item>@string/June</item>
        <item>@string/July</item>
        <item>@string/August</item>
        <item>@string/September</item>
        <item>@string/October</item>
        <item>@string/November</item>
        <item>@string/December</item>
    </string-array>


    <string name="selec_date">Select date</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="time_period_text">Time period: </string>

    <string name="title_activity_main2">MainActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="most_popular">Most popular</string>
    <string name="article_search">Article Search</string>
    <string name="archive">Archive</string>

    <string name="mostemailed">Most emailed</string>
    <string name="mostshared">Most shared</string>
    <string name="mostviewed">Most viewed</string>

    <string name="no_articles">No articles!</string>
    <string name="error_request_url">Incorrect request!</string>
</resources>
